.deploy/overlays/stage/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: brokerage-stage
  labels:
    app.kubernetes.io/name: brokerage-order-service
    environment: stage
