.deploy/overlays/stage/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: brokerage-order-service
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: brokerage-order-service
          resources:
            requests:
              cpu: 200m
              memory: 384Mi
            limits:
              cpu: 500m
              memory: 512Mi
